--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,321 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+body {
+	background: black;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+body {
+	background: #eeeeee;
+}
+.contain {
+	width: 1024px;
+	height: 1500px;
+	margin: 0 auto;
+	text-align: center;
+	padding: 20px;
+	background: #eeeeee;
+
+}
+
+nav {
+	width: 876px;
+	position: relative;
+	margin: 0px 0px 100px 40px;
+	
+	
+}
+nav a {
+	margin: 0px 27px 0px 27px;
+	text-decoration: none;
+	color: gray;
+	font-size: 15px;
+}
+
+hr {
+	width: 876px;
+}
+
+.logo {
+	position: relative;
+	top: 10px;
+}
+
+.start-box {
+	display: flex;
+	flex-direction: column;
+	margin: 0 auto;
+}
+
+.start-box button {
+	background: transparent;
+	border: 1px solid black;
+	width: 200px;
+	height: 35px;
+	font-family: 'Titillium Web';
+	font-size: 17px;
+	font-weight: 500;
+	margin: 0 auto;
+	
+}
+
+.start-box h1 {
+	font-size: 70px;
+	margin-bottom: 20px;
+}
+
+header img {
+	margin: 0 auto;
+}
+
+#maincontent {
+    width: 85%;
+    align-items: center;
+    display: flex;
+	margin: 0 auto;
+	margin-bottom: 60px;
+    text-align: center;
+    flex-direction: row;
+}
+
+#fa {
+	display: flex;
+	flex-direction: row;
+	width: 876px;
+	margin: 0 auto;
+	margin-bottom: 30px;
+	margin-top: 30px;
+}
+
+#spv {
+	display: flex;
+	flex-direction: row;
+	width: 876px;
+	margin: 0 auto;
+	margin-top: 40px;
+	text-align: left;
+}
+#contact {
+	display: flex;
+	flex-direction: column;
+	width: 876px;
+	margin: 40px 0px 30px 0px;
+	text-align: center;
+}
+
+.sm-item {
+	display: flex;
+	flex-direction: column;
+	width: 30%;
+	text-align: left;
+	position: relative;
+	margin: 0 auto;
+}
+
+.m-item {
+	display: flex;
+	flex-direction: column;
+	width: 435px;
+	text-align: left;
+	position: relative;
+}
+
+.about, .vision {
+	float: right;
+}
+
+.product, .vision {
+	margin-left: 43px;
+}
+
+.features, .services {
+	float: left;
+}
+
+.contact {
+	width: 33%;
+	text-align: left;
+	float: left;
+}
+
+#cf {
+	position: relative;
+	margin: 0 auto;
+	width: 876px;
+	margin-top: 30px;
+}
+
+footer {
+	position: relative;
+	text-align: center;
+	margin-top: -100px;
+}
+
+@media (max-width: 500px) {
+
+    .contain, .product, .vision, .features, .services { 
+        padding: 0;
+        margin: 0;
+        float: none;
+    }
+    
+    nav {
+        width: 100%;
+        margin: 0px 0px 80px 0px;
+    }
+
+    nav a {
+        display: block;
+        margin: 0;
+        font-size: 35px;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+        padding: 40px;
+    }
+
+    #logo-a {
+        border: none;
+        margin: 0px 0px 20px 0px;
+    }
+    
+    .logo {
+        transform: scale(1.75);
+    }
+
+    #maincontent {
+        flex-direction: column;
+    }
+
+    .start-box h1 {
+        font-size: 110px;
+    }
+
+    .start-box button {
+        width: 200px;
+        height: 38px;
+        font-size: 19px;
+    }
+
+    #fa {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sm-item {
+        width: 100%;
+        margin-bottom: 60px;
+    }
+
+    .sm-item h3 {
+        font-size: 35px;
+    }
+    .sm-item p, .sm-item address {
+        font-size: 25px;
+    }
+
+    .m-item {
+        width: 100%;
+        margin-bottom: 60px;
+    }
+
+    .m-item h3 {
+        font-size: 35px;
+    }
+    .m-item p {
+        font-size: 25px;
+    }
+
+    #spv {
+        flex-direction: column;
+    }
+
+}
+
+@media (max-width: 800px) {
+
+    .contain {
+        margin: 0;
+        padding: 0;
+    }
+
+    #logo-a {
+        display: block;
+        margin: 0px 0px 40px 0px;
+    }
+
+    nav {
+        margin: auto;
+        margin-bottom: 60px;
+    }
+
+    #head-hr {
+        border-bottom: 2px solid black;
+    }
+
+}
+
 
 
